<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juanjo.ejerciciostema4.Ejercicio3Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ejercicio3"
        android:id="@+id/ejercicio3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navegar"
        android:id="@+id/botonNavegador"
        android:layout_below="@+id/ejercicio3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:onClick="llamadaIntent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcar"
        android:id="@+id/botonMarcar"
        android:layout_below="@+id/botonNavegador"
        android:layout_alignRight="@+id/botonNavegador"
        android:layout_alignEnd="@+id/botonNavegador"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="llamadaIntent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactos"
        android:id="@+id/botonContactos"
        android:layout_below="@+id/botonMarcar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/botonMarcar"
        android:layout_alignEnd="@+id/botonMarcar"
        android:onClick="llamadaIntent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entrada3Label"
        android:id="@+id/entrada3Label"
        android:layout_below="@+id/botonContactos"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/entrada3Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
